build based on b72414e

--- a/latest/index.html
+++ b/latest/index.html
@@ -112,19 +112,19 @@
 <strong><code>DischargeData.Quantity</code></strong> &mdash; <em>Type</em>.</p>
 <p>A <code>Quantity</code> represents a time series of some quantity measured in a tidal channel. You might measure water  levels (<code>Stage</code>) or flow (<code>Discharge</code>) or whatever water quality parameters you might think up (not implemented).</p>
 <p>Each sample of a quantity is assumed to be drawn at a  real-world time, so a <code>Quantity</code> is a vector of values of the  quantity in some space <code>T</code> attached to a <code>DateTime</code>.</p>
-<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/86c00ae6c013f40609bf171a6c0f700cc4682065/src/quantities.jl#L1-L10' class='documenter-source'>source</a><br></p>
+<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/b72414eb7092a7b36669530cf425ab0005111a89/src/quantities.jl#L1-L10' class='documenter-source'>source</a><br></p>
 <p><a id='DischargeData.times' href='#DischargeData.times'>#</a>
 <strong><code>DischargeData.times</code></strong> &mdash; <em>Function</em>.</p>
 <p>Return the times at which the quantity is measured</p>
-<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/86c00ae6c013f40609bf171a6c0f700cc4682065/src/quantities.jl#L13' class='documenter-source'>source</a><br></p>
+<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/b72414eb7092a7b36669530cf425ab0005111a89/src/quantities.jl#L13' class='documenter-source'>source</a><br></p>
 <p><a id='DischargeData.quantity' href='#DischargeData.quantity'>#</a>
 <strong><code>DischargeData.quantity</code></strong> &mdash; <em>Function</em>.</p>
 <p>Return the values of the quantity itself</p>
-<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/86c00ae6c013f40609bf171a6c0f700cc4682065/src/quantities.jl#L16' class='documenter-source'>source</a><br></p>
+<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/b72414eb7092a7b36669530cf425ab0005111a89/src/quantities.jl#L16' class='documenter-source'>source</a><br></p>
 <p><a id='DischargeData.unzip' href='#DischargeData.unzip'>#</a>
 <strong><code>DischargeData.unzip</code></strong> &mdash; <em>Function</em>.</p>
 <p>Return both of the parts of the quantity</p>
-<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/86c00ae6c013f40609bf171a6c0f700cc4682065/src/quantities.jl#L19-L21' class='documenter-source'>source</a><br></p>
+<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/b72414eb7092a7b36669530cf425ab0005111a89/src/quantities.jl#L19-L21' class='documenter-source'>source</a><br></p>
 <p><a id='DischargeData.@quantity' href='#DischargeData.@quantity'>#</a>
 <strong><code>DischargeData.@quantity</code></strong> &mdash; <em>Macro</em>.</p>
 <pre><code>@quantity name T
@@ -136,25 +136,36 @@
 </code></pre>
 
 <p>generates a new type Stage &lt;: Quantity{Float64} which is a Real-valued time series </p>
-<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/86c00ae6c013f40609bf171a6c0f700cc4682065/src/quantities.jl#L31-L46' class='documenter-source'>source</a><br></p>
+<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/b72414eb7092a7b36669530cf425ab0005111a89/src/quantities.jl#L31-L46' class='documenter-source'>source</a><br></p>
+<p><a id='DischargeData.@quantity_op' href='#DischargeData.@quantity_op'>#</a>
+<strong><code>DischargeData.@quantity_op</code></strong> &mdash; <em>Macro</em>.</p>
+<pre><code>@quantity_op Quantity = Quantity (:op) Quantity
+</code></pre>
+
+<p>This macro defines a Quantity as the output of an  operation on two other Quantities. The operation is applied by a map over the two input quantities, so it is possible to define any operation which makes sense pointwise in a time series.</p>
+<p><strong>Examples</strong></p>
+<pre><code class="julia">@quantity_op Discharge = CrossSectionalArea * AlongChannelVelocity
+</code></pre>
+
+<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/b72414eb7092a7b36669530cf425ab0005111a89/src/quantities.jl#L56-L71' class='documenter-source'>source</a><br></p>
 <p><a id='Concrete-Quantities-1'></a></p>
 <h2 id="concrete-quantities">Concrete Quantities</h2>
 <p><a id='DischargeData.Stage' href='#DischargeData.Stage'>#</a>
 <strong><code>DischargeData.Stage</code></strong> &mdash; <em>Type</em>.</p>
 <p>An $R$-valued time series for water levels</p>
-<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/86c00ae6c013f40609bf171a6c0f700cc4682065/src/quantities.jl#L73-L75' class='documenter-source'>source</a><br></p>
+<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/b72414eb7092a7b36669530cf425ab0005111a89/src/quantities.jl#L89-L91' class='documenter-source'>source</a><br></p>
 <p><a id='DischargeData.CrossSectionalArea' href='#DischargeData.CrossSectionalArea'>#</a>
 <strong><code>DischargeData.CrossSectionalArea</code></strong> &mdash; <em>Type</em>.</p>
 <p>An $R$-valued time series for the flooded cross-sectional area of a channel</p>
-<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/86c00ae6c013f40609bf171a6c0f700cc4682065/src/quantities.jl#L78-L81' class='documenter-source'>source</a><br></p>
+<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/b72414eb7092a7b36669530cf425ab0005111a89/src/quantities.jl#L94-L97' class='documenter-source'>source</a><br></p>
 <p><a id='DischargeData.Velocity' href='#DischargeData.Velocity'>#</a>
 <strong><code>DischargeData.Velocity</code></strong> &mdash; <em>Type</em>.</p>
 <p>An $R^3$ valued time series for velocity</p>
-<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/86c00ae6c013f40609bf171a6c0f700cc4682065/src/quantities.jl#L84-L86' class='documenter-source'>source</a><br></p>
+<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/b72414eb7092a7b36669530cf425ab0005111a89/src/quantities.jl#L100-L102' class='documenter-source'>source</a><br></p>
 <p><a id='DischargeData.Discharge' href='#DischargeData.Discharge'>#</a>
 <strong><code>DischargeData.Discharge</code></strong> &mdash; <em>Type</em>.</p>
 <p>An $R$-valued time series for discharge</p>
-<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/86c00ae6c013f40609bf171a6c0f700cc4682065/src/quantities.jl#L95-L97' class='documenter-source'>source</a><br></p>
+<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/b72414eb7092a7b36669530cf425ab0005111a89/src/quantities.jl#L111-L113' class='documenter-source'>source</a><br></p>
 <p><a id='Calibrations-1'></a></p>
 <h2 id="calibrations">Calibrations</h2>
 <p><a id='DischargeData.Calibration' href='#DischargeData.Calibration'>#</a>
@@ -164,15 +175,15 @@
 <li>qto is the 'true' quantity that we want to calibrate to</li>
 <li>qfrom is the measured quantity that we want to calibrate from</li>
 </ul>
-<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/86c00ae6c013f40609bf171a6c0f700cc4682065/src/calibrations.jl#L1-L6' class='documenter-source'>source</a><br></p>
+<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/b72414eb7092a7b36669530cf425ab0005111a89/src/calibrations.jl#L1-L6' class='documenter-source'>source</a><br></p>
 <p><a id='DischargeData.to_quantity' href='#DischargeData.to_quantity'>#</a>
 <strong><code>DischargeData.to_quantity</code></strong> &mdash; <em>Function</em>.</p>
 <p>Return the to quantity</p>
-<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/86c00ae6c013f40609bf171a6c0f700cc4682065/src/calibrations.jl#L12' class='documenter-source'>source</a><br></p>
+<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/b72414eb7092a7b36669530cf425ab0005111a89/src/calibrations.jl#L12' class='documenter-source'>source</a><br></p>
 <p><a id='DischargeData.from_quantity' href='#DischargeData.from_quantity'>#</a>
 <strong><code>DischargeData.from_quantity</code></strong> &mdash; <em>Function</em>.</p>
 <p>Return the from quantity</p>
-<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/86c00ae6c013f40609bf171a6c0f700cc4682065/src/calibrations.jl#L15' class='documenter-source'>source</a><br></p>
+<p><a target='_blank' href='https://github.com/wkearn/DischargeData.jl/tree/b72414eb7092a7b36669530cf425ab0005111a89/src/calibrations.jl#L15' class='documenter-source'>source</a><br></p>
               
             </div>
           </div>
@@ -214,5 +225,5 @@
 
 <!--
 MkDocs version : 0.16.3
-Build Date UTC : 2017-04-25 13:31:42
+Build Date UTC : 2017-04-25 13:37:28
 -->
